# cruiser

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: rust.yml
check_all/: Cargo.toml
check_all/src/: main.rs
check_versions/: Cargo.toml
check_versions/src/: main.rs
derive/: Cargo.toml
derive/src/: account_argument.rs  account_list.rs  error.rs  get_properties.rs  in_place.rs  instruction_list.rs  instruction_list_processor.rs  lib.rs  log_level.rs  on_chain_size.rs  verify_account_arg_impl.rs
easy_proc/: Cargo.toml
easy_proc/common/: Cargo.toml
easy_proc/common/src/: lib.rs
easy_proc/derive/: Cargo.toml
easy_proc/derive/src/: lib.rs
easy_proc/examples/: argument_list.rs
easy_proc/src/: lib.rs
escrow_example/: Cargo.toml
escrow_example/src/: client.rs  cpi.rs  lib.rs
escrow_example/src/instructions/: exchange.rs  init_escrow.rs  mod.rs
escrow_example/tests/: escrow_test.rs
examples/: account_argument_derive.rs  account_derive.rs  easy_proc_test.rs  instruction_list.rs
src/: account_info.rs  cpi.rs  cruiser_error.rs  discriminant.rs  entrypoint.rs  error.rs  generic_error.rs  indexer.rs  lib.rs  macros.rs  pda_seeds.rs  prelude.rs
src/account_types/: close_account.rs  cruiser_program_account.rs  data_account.rs  discriminant_account.rs  in_place_account.rs  init_account.rs  init_or_zeroed_account.rs  mod.rs  pod_account.rs  pod_list.rs  program_account.rs  read_only_data_account.rs  rent_exempt.rs  rest.rs  seeds.rs  sys_var.rs  system_program.rs  zeroed_account.rs
src/client/: mod.rs  system_program.rs  token.rs
src/compressed_numbers/: byte_count.rs  mod.rs  zero_count.rs
src/cpi/: client.rs  method.rs  mod.rs
src/impls/: array.rs  box.rs  mod.rs  option.rs  phantom_data.rs  unit.rs  vec.rs  vec_deque.rs
src/spl/: mod.rs  token.rs
src/spl/token/: mint_account.rs  mod.rs  program.rs  token_account.rs
src/testing/: mod.rs
src/traits/: account.rs  account_argument.rs  account_list.rs  error.rs  in_place.rs  indexer.rs  instruction.rs  instruction_list.rs  mod.rs  on_chain_size.rs  program.rs  serde.rs
src/traits/account_argument/: from_accounts.rs  mod.rs  multi_indexable.rs  single_indexable.rs  validate_argument.rs
src/traits/in_place/: array.rs  builders.rs  mod.rs  option.rs  prim.rs  properties.rs  pubkey.rs  static_size_vec.rs  unit.rs  vec.rs
src/types/: mod.rs  small_vec.rs
src/util/: assert.rs  bytes_ext.rs  chain_exact_size.rs  mod.rs  short_iter.rs  short_vec.rs  with_data.rs
tests/: in_place_properties.rs
ts_helpers/: package.json  tsconfig.json
ts_helpers/src/: borsh.ts  index.ts  num.ts
