[package]
name = "cruiser"
version = "0.1.2"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "Solana code generation"
documentation = "https://docs.rs/cruiser/latest/cruiser/"
readme = "README.md"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"
keywords = ["solana", "cruiser"]
categories = ["development-tools", "cryptography::cryptocurrencies"]
build = "build.rs"

[workspace]
members = [
    "derive",
    "easy_proc",
    "easy_proc/common",
    "easy_proc/derive",
    "escrow_example",
]

[features]
default = ["processor"]
processor = []
client = []
testing = ["solana-sdk", "solana-program-test", "solana-client"]
experimental = ["in_place", "small_vec"]
in_place = ["cruiser_derive/in_place"]
small_vec = []

[dependencies]
cruiser_derive = { version = "0.1.2", path = "./derive" }
borsh = "0.9.2"
solana-program = "1.7.12"
zeroize = "=1.3.0"
num-traits = "0.2.14"
array-init = "2.0.0"
bincode = "1.3.3"
strum = { version = "0.21.0", features = ["derive"] }
static_assertions = "1.1.0"
spl-token = { version = "=3.2.0", optional = true, features = ["no-entrypoint"] }
solana-sdk = { version = "1.9.14", optional = true }
solana-program-test = { version = "1.9.14", optional = true }
solana-client = { version = "1.9.14", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
rand = "0.8.4"

[[example]]
name = "account_argument_derive"
crate-type = ["cdylib", "lib"]

[[example]]
name = "account_derive"
crate-type = ["cdylib", "lib"]

[[example]]
name = "instruction_list"
crate-type = ["cdylib", "lib"]

[[example]]
name = "account_list"
crate-type = ["cdylib", "lib"]

[[example]]
name = "easy_proc_test"
crate-type = ["cdylib", "lib"]
required-features = ["cruiser_derive/easy_proc_test"]
