[package]
name = "cruiser"
version = "0.2.0"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "Solana code generation"
documentation = "https://docs.rs/cruiser/latest/cruiser/"
readme = "README.md"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"
keywords = ["solana", "cruiser"]
categories = ["development-tools", "cryptography::cryptocurrencies"]
build = "build.rs"

[workspace]
members = [
    "check_all",
    "check_versions",
    "derive",
    "easy_proc",
    "easy_proc/common",
    "easy_proc/derive",
    "escrow_example",
]

[profile.dev]
opt-level = 0

[profile.release]
strip = "debuginfo"
opt-level = 3
codegen-units = 1
lto = true

[features]
default = []
client = ["solana-transaction-status", "solana-sdk", "solana-client", "rand", "rand_chacha", "tokio", "tokio/time"]
experimental = []
interface = ["experimental"]
unstable = []

[dependencies]
cruiser_derive = { version = "0.2.0", path = "./derive" }
borsh = "0.9.2"
solana-program = "1.7.12"
zeroize = "=1.3.0"
num-traits = "0.2.14"
array-init = "2.0.0"
bincode = "1.3.3"
strum = { version = "0.21.0", features = ["derive"] }
static_assertions = "1.1.0"
arrayref = "0.3.6"
bytemuck = "1.9.1"

## OPTIONAL
spl-token = { version = "~3.2.0", optional = true, features = ["no-entrypoint"] }
solana-transaction-status = { version = "1.9.14", optional = true }
solana-sdk = { version = "1.9.14", optional = true }
solana-client = { version = "1.9.14", optional = true }
tokio = { version = "1.17.0", optional = true }

# These are older as solana sdk relies on rand_core 0.5.1
rand = { version = "0.7.3", optional = true }
rand_chacha = { version = "0.2.2", optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
# These are older as solana sdk relies on rand_core 0.5.1
rand = "0.7.3"
rand_chacha = "0.2.2"

[[example]]
name = "account_argument_derive"
crate-type = ["lib"]

[[example]]
name = "account_derive"
crate-type = ["lib"]

[[example]]
name = "instruction_list"
crate-type = ["lib"]

[[example]]
name = "account_list"
crate-type = ["lib"]

[[example]]
name = "easy_proc_test"
crate-type = ["lib"]
required-features = ["cruiser_derive/easy_proc_test"]
