[package]
name = "cruiser_derive"
version = "0.1.1"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "Derive macros for `cruiser`"
documentation = "https://docs.rs/cruiser_derive/latest/cruiser_derive/"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
default = []
nightly = []
debug_account = []
debug_error = []
debug_account_argument = []
debug_instruction_list = []
debug_account_list = []
debug_in_place = ["nightly"]
easy_proc_test = []
debug = ["debug_account", "debug_error", "debug_account_argument", "debug_instruction_list", "debug_account_list"]

[dependencies]
proc-macro2 = "1.0.27"
syn = "1.0.73"
quote = "1.0.9"
sha2 = "0.9.5"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.0.0"
easy_proc = { version = "0.1.0", path = "../easy_proc" }
heck = "0.4.0"

[dev-dependencies]
cruiser = { path = ".." }
