[package]
name = "easy_proc"
version = "0.1.0"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "Helper macros for making proc macros"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"

[dependencies]
easy_proc_common = { version = "0.1.0", path = "common" }
easy_proc_derive = { version = "0.1.0", path = "derive" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.27"
syn = "1.0.73"
quote = "1.0.9"

[[example]]
name = "argument_list"
crate-type = ["cdylib", "lib"]
