[package]
name = "escrow_example"
version = "0.1.2"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "An example of how to build a program with `crusier`"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cruiser = { path = "..", features = ["spl-token"] }
borsh = "0.9.3"
spl-token = "3.3.0"

[lib]
crate-type = ["cdylib", "lib"]
