[package]
name = "escrow_example"
version = "0.1.2"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "An example of how to build a program with `crusier`"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["entrypoint"]
entrypoint = ["processor"]
processor = []
cpi = []
client = ["cruiser/client", "cpi"]

[dependencies]
cruiser = { path = "..", features = ["spl-token"] }

[dev-dependencies]
cruiser = { path = "..", features = ["testing"] }
reqwest = "0.11.10"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "escrow_test"
required-features = ["client"]
