[package]
name = "easy_proc_common"
version = "0.1.0"
authors = ["Brett Etter <buzzec@buzzec.net>"]
edition = "2021"
description = "Common code for `easy_proc` and `easy_proc_derive`"
repository = "https://github.com/identity-com/cruiser"
license = "Apache-2.0"

[dependencies]
syn = "1.0.84"
proc-macro-error = "1.0.4"
