[package]
name = "easy_proc_derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
easy_proc_common = { path = "../common" }
proc-macro2 = "1.0.27"
syn = { version = "1.0.73", features = ["full", "extra-traits"] }
quote = "1.0.9"
sha2 = "0.9.5"
proc-macro-error = "1.0.4"
proc-macro-crate = "1.0.0"
heck = "0.4.0"
lazy_static = "1.4.0"
